--- a/index-dev.html
+++ b/index-dev.html
@@ -10,6 +10,8 @@
 <script src="node_modules/three/build/three.js"></script>
 <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
 <script src="src/js/data.js"></script>
+<script src="src/js/Loader.js"></script>
+<script src="src/js/Avatar.js"></script>
 <script src="src/js/util.js"></script>
 <script src="src/js/main.js"></script>
 </html>
