movement around globe working, camera buggy

--- a/index-dev.html
+++ b/index-dev.html
@@ -7,10 +7,12 @@
 <body>
 	<div id="container"></div>
 </body>
+<script src="node_modules/d3-geo/build/d3-geo.min.js"></script>
 <script src="node_modules/three/build/three.js"></script>
 <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
 <script src="src/js/data.js"></script>
 <script src="src/js/Loader.js"></script>
+<script src="src/js/Globe.js"></script>
 <script src="src/js/Avatar.js"></script>
 <script src="src/js/util.js"></script>
 <script src="src/js/main.js"></script>
