--- a/index-dev.html
+++ b/index-dev.html
@@ -5,10 +5,30 @@
 	<title>LiNK (dev page)</title>
 </head>
 <body>
+	<div id="title">
+		<div class="main">
+			<h1>home</h1>
+			<h2>What does home mean to you?</h2>
+			<form id="prompt">
+				<input type="text" id="answer"></input>
+				<input type="submit"></input>
+			</form>
+		</div>
+	</div>
+	<div id="quoteBoxMain">
+		<div class="main">
+			<h1>Home is...</h1>
+			<h2 class="quoteAnswer"></h2>
+			<h2 class="username"></h2>
+			<div class="close">close</div>
+		</div>
+	</div>
 	<div id="container"></div>
 </body>
+<script src="node_modules/d3-geo/build/d3-geo.min.js"></script>
 <script src="node_modules/three/build/three.js"></script>
 <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
+<script src="src/js/ui.js"></script>
 <script src="src/js/data.js"></script>
 <script src="src/js/Loader.js"></script>
 <script src="src/js/Avatar.js"></script>
