--- a/index-dev.html
+++ b/index-dev.html
@@ -7,6 +7,35 @@
 <body>
 	<div id="container"></div>
 </body>
+<script type="vsh" id="vertexShader">
+	
+	uniform vec3 viewVector;
+	uniform float c;
+	uniform float p;
+	varying float intensity;
+
+	void main() 
+	{
+	    vec3 vNormal = normalize( normalMatrix * normal );
+		vec3 vNormel = normalize( normalMatrix * viewVector );
+		intensity = 1.5*pow( c - dot(vNormal, vNormel), p );
+		
+	    gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+	}
+
+</script>
+<script type="fsh" id="fragmentShader">
+
+	uniform vec3 glowColor;
+	varying float intensity;
+
+	void main() 
+	{
+		vec3 glow = glowColor * intensity;
+		gl_FragColor = vec4( glow, 1.0 );
+	}
+
+</script>
 <script src="node_modules/d3-geo/build/d3-geo.min.js"></script>
 <script src="node_modules/three/build/three.js"></script>
 <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
@@ -14,6 +43,7 @@
 <script src="src/js/Loader.js"></script>
 <script src="src/js/Globe.js"></script>
 <script src="src/js/Avatar.js"></script>
+<script src="src/js/GlowMesh.js"></script>
 <script src="src/js/util.js"></script>
 <script src="src/js/main.js"></script>
 </html>
