--- a/index-dev.html
+++ b/index-dev.html
@@ -12,15 +12,19 @@
 	uniform vec3 viewVector;
 	uniform float c;
 	uniform float p;
+	uniform float time;
+	uniform float level;
+
 	varying float intensity;
 
 	void main() 
 	{
 	    vec3 vNormal = normalize( normalMatrix * normal );
 		vec3 vNormel = normalize( normalMatrix * viewVector );
-		intensity = 1.5*pow( c - dot(vNormal, vNormel), p );
-		
-	    gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+		intensity = sin(time)*level*pow( c - dot(vNormal, vNormel), p );
+		vec3 offset = vec3(sin(time));
+
+	    gl_Position = projectionMatrix * modelViewMatrix * vec4( position + offset, 1.0 );
 	}
 
 </script>
