Implemented basic Cam Controller

--- a/index-dev.html
+++ b/index-dev.html
@@ -13,6 +13,7 @@
 <script src="src/js/data.js"></script>
 <script src="src/js/Loader.js"></script>
 <script src="src/js/Globe.js"></script>
+<script src="src/js/CameraController.js"></script>
 <script src="src/js/Avatar.js"></script>
 <script src="src/js/util.js"></script>
 <script src="src/js/main.js"></script>
