--- a/index-dev.html
+++ b/index-dev.html
@@ -7,12 +7,86 @@
 <body>
 	<div id="container"></div>
 </body>
+<script type="vsh" id="vertexShader">
+	
+	varying vec3 vNormal;
+	void main() 
+	{
+	    vNormal = normalize( normalMatrix * normal );
+	    gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+	}
+
+</script>
+<script type="fsh" id="fragmentShader">
+
+	uniform float c;
+	uniform float p;
+	varying vec3 vNormal;
+
+	void main() 
+	{
+		float intensity = pow( c - dot( vNormal, vec3( 0.0, 0.0, 1.0 ) ), p ); 
+		gl_FragColor = vec4( 1.0, 1.0, 1.0, 1.0 ) * intensity;
+	}
+
+</script>
+
+<script type="vsh" id="globeVertex">
+
+	uniform vec3 avatarPos;
+
+	attribute vec3 vOffset;
+
+	varying vec3 testColor;
+	varying vec3 vNormal;
+	varying float opacity;
+
+	void main() 
+	{
+	    vNormal = normalize( normalMatrix * normal );
+	    gl_PointSize = 10.;
+	    vec4 mvPosition = modelMatrix * vec4(vOffset, 1.);
+	    mvPosition.xyz += position;
+
+	    float maxDist = 200.;
+	    float dist = distance(mvPosition.xyz, avatarPos);
+	    opacity = (maxDist - distance(mvPosition.xyz, avatarPos)) / maxDist;
+	    opacity = clamp(opacity, 0., 1.);
+
+	    testColor = mvPosition.xyz;
+
+	    gl_Position = projectionMatrix * viewMatrix * mvPosition;
+	}
+
+</script>
+<script type="fsh" id="globeFragment">
+
+	uniform vec3 avatarPos;
+	uniform float c;
+	uniform float p;
+
+	varying vec3 testColor;
+	varying vec3 vNormal;
+	varying float opacity;
+
+	void main() 
+	{
+		float intensity = pow( c - dot( vNormal, vec3( 0.0, 0.0, 1.0 ) ), p ); 
+		// gl_FragColor = vec4( 1.0, 1.0, 1.0, 1.0 ) * intensity;
+		gl_FragColor = vec4( vec3(1.), opacity);
+		// gl_FragColor = vec4( normalize(testColor), opacity );
+	}
+
+</script>
+
 <script src="node_modules/d3-geo/build/d3-geo.min.js"></script>
 <script src="node_modules/three/build/three.js"></script>
 <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
+<script src="node_modules/three/examples/js/utils/GeometryUtils.js"></script>
 <script src="src/js/data.js"></script>
 <script src="src/js/Loader.js"></script>
 <script src="src/js/Globe.js"></script>
+<script src="src/js/GlowMesh.js"></script>
 <script src="src/js/Avatar.js"></script>
 <script src="src/js/util.js"></script>
 <script src="src/js/main.js"></script>
