--- a/index-dev.html
+++ b/index-dev.html
@@ -34,6 +34,7 @@
 <script type="vsh" id="globeVertex">
 
 	uniform vec3 avatarPos;
+	uniform float appearAmt; //0->1 how many meshes appear around avatar
 
 	attribute vec3 vOffset;
 
@@ -41,29 +42,32 @@
 	varying vec3 vNormal;
 	varying float opacity;
 
+	float rand(float n){return fract(sin(n) * 43758.5453123);}
+
 	void main() 
 	{
 	    vNormal = normalize( normalMatrix * normal );
-	    gl_PointSize = 10.;
-	    vec4 mvPosition = modelMatrix * vec4(vOffset, 1.);
-	    mvPosition.xyz += position;
+	    vec4 mPosition = modelMatrix * vec4(vOffset, 1.);
+	    float scale = rand(vOffset.x);
+	    mPosition.xyz += position * 3.*scale;
 
 	    float maxDist = 200.;
-	    float dist = distance(mvPosition.xyz, avatarPos);
-	    opacity = (maxDist - distance(mvPosition.xyz, avatarPos)) / maxDist;
+	    float dist = distance(mPosition.xyz, avatarPos);
+	    opacity = (maxDist - distance(mPosition.xyz, avatarPos)) / maxDist;
 	    opacity = clamp(opacity, 0., 1.);
 
-	    testColor = mvPosition.xyz;
+	    float appear = step( 1.-appearAmt, rand(dist) );
+	    opacity *= appear;
 
-	    gl_Position = projectionMatrix * viewMatrix * mvPosition;
+	    testColor = (viewMatrix * mPosition).xyz;
+
+	    gl_Position = projectionMatrix * viewMatrix * mPosition;
 	}
 
 </script>
 <script type="fsh" id="globeFragment">
 
 	uniform vec3 avatarPos;
-	uniform float c;
-	uniform float p;
 
 	varying vec3 testColor;
 	varying vec3 vNormal;
@@ -71,7 +75,7 @@
 
 	void main() 
 	{
-		float intensity = pow( c - dot( vNormal, vec3( 0.0, 0.0, 1.0 ) ), p ); 
+		// float intensity = pow( c - dot( vNormal, vec3( 0.0, 0.0, 1.0 ) ), p ); 
 		// gl_FragColor = vec4( 1.0, 1.0, 1.0, 1.0 ) * intensity;
 		gl_FragColor = vec4( vec3(1.), opacity);
 		// gl_FragColor = vec4( normalize(testColor), opacity );
