--- a/index-dev.html
+++ b/index-dev.html
@@ -83,6 +83,7 @@
 <script src="node_modules/d3-geo/build/d3-geo.min.js"></script>
 <script src="node_modules/three/build/three.js"></script>
 <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
+<script src="node_modules/three/examples/js/modifiers/SubdivisionModifier.js"></script>
 <script src="node_modules/three/examples/js/utils/GeometryUtils.js"></script>
 <script src="src/js/data.js"></script>
 <script src="src/js/Loader.js"></script>
