--- a/index-dev.html
+++ b/index-dev.html
@@ -10,10 +10,16 @@
 <script src="node_modules/d3-geo/build/d3-geo.min.js"></script>
 <script src="node_modules/three/build/three.js"></script>
 <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
+<script src="node_modules/three/examples/js/modifiers/SubdivisionModifier.js"></script>
+<script src="node_modules/three/examples/js/utils/GeometryUtils.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
 <script src="src/js/data.js"></script>
 <script src="src/js/Loader.js"></script>
 <script src="src/js/Globe.js"></script>
+<script src="src/js/CameraController.js"></script>
+<script src="src/js/Animator.js"></script>
+<script src="src/js/GlowMesh.js"></script>
 <script src="src/js/Avatar.js"></script>
 <script src="src/js/util.js"></script>
 <script src="src/js/main.js"></script>
