add api controller

--- a/index-dev.html
+++ b/index-dev.html
@@ -92,4 +92,5 @@
 <script src="src/js/GlowMesh.js"></script>
 <script src="src/js/Avatar.js"></script>
 <script src="src/js/main.js"></script>
+<script src="src/js/Submit.js"></script>
 </html>
