add basic ui flow

--- a/index-dev.html
+++ b/index-dev.html
@@ -9,21 +9,22 @@
 <body>
 	<div id="title">
 		<div class="main">
-			<h1>home</h1>
+			<h1 class="glow">home</h1>
 			<h2>a charity project for Liberty in North Korea.</h2>
+			<div class="submitButton glowBorder"></div>
 		</div>
 	</div>
 	<div id="quoteInput">
 		<div class="main">
-			<h1>What is home?</h1>
+			<h1 class="glow">What is home?</h1>
 			<form id="prompt">
 				<textarea maxlength="250" rows="3" spellcheck="false" id="userAnswer" class="textinput" type="text" id="answer" autofocus autocomplete="off"></textarea>
 			</form>
 			<div class="remaining"><span id="userAnswerRemaining">250</span> characters remaining</div>
-			<div id="userSubmitQuote"></div>
+			<div class="submitButton glowBorder"></div>
 		</div>
 	</div>
-	<div id="quoteBoxMain">
+	<div id="quoteMain">
 		<div class="main">
 			<h1>Home is...</h1>
 			<h2 class="quoteAnswer"></h2>
@@ -115,8 +116,9 @@
 <script src="src/js/data.js"></script>
 <script src="src/js/Loader.js"></script>
 <script src="src/js/Globe.js"></script>
-<script src="src/js/GlowMesh.js"></script>
+<script src="src/js/glowMesh.js"></script>
 <script src="src/js/Avatar.js"></script>
 <script src="src/js/main.js"></script>
 <script src="src/js/Submit.js"></script>
+<script src="src/js/ui.js"></script>
 </html>
