start world controller

--- a/index-dev.html
+++ b/index-dev.html
@@ -121,4 +121,5 @@
 <script src="src/js/main.js"></script>
 <script src="src/js/Submit.js"></script>
 <script src="src/js/ui.js"></script>
+<script src="src/js/WorldController.js"></script>
 </html>
