finish click and hold for title page

--- a/index-dev.html
+++ b/index-dev.html
@@ -3,18 +3,19 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="assets/fonts/caslon-web/stylesheet.css"/>
 	<link rel="stylesheet" type="text/css" href="assets/fonts/brandon-text-web/stylesheet.css"/>
+	<link rel="stylesheet" type="text/css" href="assets/fonts/itc-grouch-web/stylesheet.css"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<title>LiNK (dev page)</title>
 </head>
 <body>
-	<div id="title">
+	<div id="title" class="screen">
 		<div class="main">
-			<h1 class="glow">home</h1>
+			<h1 class="glow">Home</h1>
 			<h2>a charity project for Liberty in North Korea.</h2>
-			<div class="submitButton glowBorder"></div>
+			<p class="blinkAnim">CLICK AND HOLD</p>
 		</div>
 	</div>
-	<div id="quoteInput">
+	<div id="quoteInput" class="screen">
 		<div class="main">
 			<h1 class="glow">What is home?</h1>
 			<form id="prompt">
@@ -24,7 +25,7 @@
 			<div class="submitButton glowBorder"></div>
 		</div>
 	</div>
-	<div id="quoteMain">
+	<div id="quoteMain" class="screen">
 		<div class="main">
 			<h1>Home is...</h1>
 			<h2 class="quoteAnswer"></h2>
