finish donation box with submit. going to run tests

--- a/index-dev.html
+++ b/index-dev.html
@@ -35,6 +35,7 @@
 	<div id="donation" class="screen">
 		<div class="wrapper">
 			<div class="main">
+				<div id="donationClose" class="submitButton glowBorder"></div>
 				<div class="info">
 					<h1 class="glow">Help others find a home</h1>
 					<p>We all have a home. Some don't. Every year, Liberty in North Korea helps refugees escape an oppressive country and find a home somewhere else... donate the support the cause.</p>
@@ -57,6 +58,9 @@
 						<label for="expiration">expiration</label>
 						<input maxlength="5" type="text" class="form-control" id="expiration" autocomplete="nope"></input>
 						<h1 class="description">mm/yy</h1>
+					</div>
+					<div id="submit">
+						<button type="submit">submit</button>
 					</div>
 				</form>
 			</div>
