add character randomization

--- a/index-dev.html
+++ b/index-dev.html
@@ -172,7 +172,7 @@
 <script src="src/js/Globe.js"></script>
 <script src="src/js/glowMesh.js"></script>
 <script src="src/js/Avatar.js"></script>
-<script src="src/js/Submit.js"></script>
+<script src="src/js/API.js"></script>
 <script src="src/js/WorldController.js"></script>
 <script src="src/js/ui.js"></script>
 <script src="src/js/main.js"></script>
