broken get call, but post works

--- a/index-dev.html
+++ b/index-dev.html
@@ -47,7 +47,7 @@
 				<div id="donationClose" class="submitButton glowBorder"></div>
 				<div class="info">
 					<h1 class="glow">Help others find a home</h1>
-					<p>What is home? Some say it's where the lights are, where the family is. Or maybe it's "<span id="donationQuoteAnswer">sample here</span>." The question of what is easier to answer than where. </br></br>Every year, Liberty in North Korea helps refugees escape an oppressive country. They do this this that this... Help by donating to LiNK below.</p>
+					<p>What is home? Some say it's where the lights are, where the family is. Or maybe it's <span id="donationQuoteAnswer">sample here</span> The question of what is easier to answer than where. </br></br>Every year, Liberty in North Korea helps refugees escape an oppressive country. They do this this that this... Help by donating to LiNK below.</p>
 					<a href="https://www.libertyinnorthkorea.org/" target="_blank">learn more</a>
 				</div>
 				<form id="donationForm" spellcheck="false">
