updated api calls

--- a/index-dev.html
+++ b/index-dev.html
@@ -85,9 +85,9 @@
 			</div>
 		</div>
 	</div>
-	<div id="container"></div>
+	<div stye="display:none"id="container"></div>
 </body>
-<script type="vsh" id="vertexShader">
+<!-- <script type="vsh" id="vertexShader">
 	
 	varying vec3 vNormal;
 	void main() 
@@ -158,7 +158,7 @@
 		// gl_FragColor = vec4( normalize(testColor), opacity );
 	}
 
-</script>
+</script> -->
 
 <script src="node_modules/d3-geo/build/d3-geo.min.js"></script>
 <script src="node_modules/three/build/three.js"></script>
