serving static page at port 3000

--- a/public/index.html
+++ b/public/index.html
@@ -160,19 +160,6 @@
 
 </script>
 
-<script src="/js/lib/three.js"></script>
-<script src="/js/lib/OrbitControls.js"></script>
-<script src="/js/lib/SubdivisionModifier.js"></script>
-<script src="/js/lib/GeometryUtils.js"></script>
-<script src="/js/lib/Tween.js"></script>
-<script src="/js/util.js"></script>
-<script src="/js/data.js"></script>
-<script src="/js/Loader.js"></script>
-<script src="/js/Globe.js"></script>
-<script src="/js/glowMesh.js"></script>
-<script src="/js/Avatar.js"></script>
-<script src="/js/API.js"></script>
-<script src="/js/WorldController.js"></script>
-<script src="/js/ui.js"></script>
-<script src="/js/main.js"></script>
+<script src="js/dist/lib.js"></script>
+<script src="js/dist/app.js"></script>
 </html>
