figured out how to serve same static js files

--- a/public/index.html
+++ b/public/index.html
@@ -160,6 +160,6 @@
 
 </script>
 
-<script src="js/dist/lib.js"></script>
-<script src="js/dist/app.js"></script>
+<script src="/js/dist/lib.js"></script>
+<script src="/js/dist/app.js"></script>
 </html>
