--- a/public/index.html
+++ b/public/index.html
@@ -177,6 +177,7 @@
 <script type="text/javascript" src="/js/Avatar.js"></script>
 <script type="text/javascript" src="/js/API.js"></script>
 <script type="text/javascript" src="/js/WorldController.js"></script>
+<script type="text/javascript" src="/js/Animations.js"></script>
 <script type="text/javascript" src="/js/ui.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
 </html>
