fix panda stuff

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 			<div id="quoteMainClose" class="submitButton glowBorder"></div>
 		</div>
 	</div>
-	<div id="donation" class="screen" style="visibility:visible;">
+	<div id="donation" class="screen">
 		<div class="wrapper">
 			<div class="main">
 				<div id="donationClose" class="submitButton glowBorder"></div>
