--- a/public/index.html
+++ b/public/index.html
@@ -166,6 +166,7 @@
 
 </script>
 
+
 <script type="text/javascript" src="/js/lib/three.js"></script>
 <script type="text/javascript" src="/js/lib/OrbitControls.js"></script>
 <script type="text/javascript" src="/js/lib/SubdivisionModifier.js"></script>
@@ -189,4 +190,17 @@
 <script type="text/javascript" src="/js/Animations.js"></script>
 <script type="text/javascript" src="/js/ui.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
+
+<script type="text/javascript">
+	Panda.init('pk_test_2C04UlQCKet4YoLtQVNkNQ', 'donationForm');
+
+	Panda.on('success', function(token){
+		UIController.submitDonation();
+	});
+	Panda.on('error', async function(errors){
+		UIController.errorDisplay(errors);
+	});
+</script>
+
+
 </html>
