fix char positions and stopping when meeting main char

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<title>LiNK (dev page)</title>
 </head>
 <body>
-	<div id="title" class="screen">
+	<div id="title" class="screen" style="display: none;">
 		<div class="main">
 			<h1 class="glow">Home</h1>
 			<h2>a charity project for Liberty in North Korea.</h2>
