add error msgs on name and quote inputs

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 				<textarea maxlength="250" rows="3" spellcheck="false" id="nameInputAnswer" class="textinput" type="text"" autofocus autocomplete="nope"></textarea>
 			</form>
 			<div class="submitButton glowBorder"></div>
+			<div id="nameInputErr" class="inputErr">&zwnj;</div>
 		</div>
 	</div>
 	<div id="quoteInput" class="screen">
@@ -33,6 +34,7 @@
 			</form>
 			<div class="remaining"><span id="userAnswerRemaining">250</span> characters remaining</div>
 			<div class="submitButton glowBorder"></div>
+			<div id="quoteInputErr" class="inputErr">&zwnj;</div>
 		</div>
 	</div>
 	<div id="quoteMain" class="screen" >
