add audio and loop of experience

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<title>LiNK (dev page)</title>
 </head>
 <body>
-	<div id="title" class="screen" style="display: none;">
+	<div id="title" class="screen">
 		<div class="main">
 			<h1 class="glow">Home</h1>
 			<h2>a charity project for Liberty in North Korea.</h2>
@@ -191,6 +191,7 @@
 <script type="text/javascript" src="/js/WorldController.js"></script>
 <script type="text/javascript" src="/js/Animations.js"></script>
 <script type="text/javascript" src="/js/ui.js"></script>
+<script type="text/javascript" src="/js/AudioController.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
 
 <script type="text/javascript">
