--- a/public/index.html
+++ b/public/index.html
@@ -28,18 +28,21 @@
 	</div>
 	<div id="quoteInput" class="screen">
 		<div class="main">
-			<h1 class="glow">Home is...</h1>
+			<h1 class="glow">Home means...</h1>
 			<form id="prompt">
 				<textarea maxlength="250" rows="3" spellcheck="false" id="userAnswer" class="textinput" type="text" autofocus autocomplete="nope"></textarea>
 			</form>
 			<div class="remaining"><span id="userAnswerRemaining">250</span> characters remaining</div>
-			<div class="submitButton glowBorder"></div>
+			<div class="submitButton glowBorder info"></div>
 			<div id="quoteInputErr" class="inputErr">&zwnj;</div>
 		</div>
 	</div>
 	<div id="quoteMain" class="screen" >
+		<div class="submitButton glowBorder">
+			
+		</div>
 		<div class="main">
-			<h1 id="quoteMainAnswer">"Home is where I can eat a peanut banana sandwich."</h1>
+			<h2 id="quoteMainAnswer">"Home is where I can eat a peanut banana sandwich."</h2>
 			<p id="quoteMainUser">Bryan Wong, Los Angeles</p>
 			<div id="quoteMainClose" class="submitButton glowBorder"></div>
 		</div>
